Fix tests and add stb_image implementation
- Fixed MeshTests by updating method names to match Mesh class
- Fixed TextureTests by updating method names to match Texture class
- Fixed RendererTests by using singleton pattern
- Added stb_image implementation file to fix linker errors
- Updated CMakeLists.txt to include new files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
-project(PlatformerEngine VERSION 1.0.0 LANGUAGES CXX)
+
+# Set CMake policies
+cmake_policy(SET CMP0135 NEW)
+
+# Set language before project declaration
+enable_language(C CXX)
+
+project(PlatformerEngine VERSION 0.1.0 LANGUAGES C CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -18,6 +25,19 @@ else()
     add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# Enable testing
+enable_testing()
+
+# Include FetchContent for downloading dependencies
+include(FetchContent)
+
+# Fetch GoogleTest
+FetchContent_Declare(
+    googletest
+    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+FetchContent_MakeAvailable(googletest)
+
 # Find packages
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
@@ -30,14 +50,29 @@ else()
     find_package(OpenAL REQUIRED)
 endif()
 
+# Add GLAD
+add_library(glad STATIC
+    external/glad/src/glad.c
+)
+target_include_directories(glad PUBLIC external/glad/include)
+
+# Add stb_image include directory
+include_directories(${CMAKE_SOURCE_DIR}/external/stb)
+
 # Source files
 set(SOURCES
+    src/main.cpp
     src/core/Engine.cpp
     src/core/Window.cpp
-    src/core/Logger.cpp
-    src/core/Timer.cpp
     src/core/Input.cpp
+    src/core/Timer.cpp
+    src/core/Logger.cpp
     src/core/ResourceManager.cpp
+    src/graphics/Mesh.cpp
+    src/graphics/Texture.cpp
+    src/graphics/Shader.cpp
+    src/graphics/Renderer.cpp
+    src/graphics/stb_image_impl.cpp
     src/utils/Debug.cpp
 )
 
@@ -45,11 +80,16 @@ set(SOURCES
 set(HEADERS
     include/core/Engine.hpp
     include/core/Window.hpp
-    include/core/Logger.hpp
-    include/core/Timer.hpp
     include/core/Input.hpp
+    include/core/Timer.hpp
+    include/core/Logger.hpp
     include/core/Resource.hpp
     include/core/ResourceManager.hpp
+    include/graphics/Mesh.hpp
+    include/graphics/Texture.hpp
+    include/graphics/Shader.hpp
+    include/graphics/Renderer.hpp
+    include/graphics/Vertex.hpp
     include/utils/Debug.hpp
 )
 
@@ -59,7 +99,9 @@ add_library(${PROJECT_NAME}Lib STATIC ${SOURCES} ${HEADERS})
 # Set include directories for the library
 target_include_directories(${PROJECT_NAME}Lib
     PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/external/stb
+        ${CMAKE_SOURCE_DIR}/external/glad/include
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
@@ -70,6 +112,7 @@ target_link_libraries(${PROJECT_NAME}Lib
         OpenGL::GL
         glfw
         glm::glm
+        glad
         ${OPENAL_LIBRARY}
 )
 
@@ -88,9 +131,24 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets
 )
 
-# Enable testing
-enable_testing()
-add_subdirectory(tests)
+# Test files
+set(TEST_SOURCES
+    tests/core/ResourceManagerTests.cpp
+    tests/graphics/VertexTests.cpp
+    tests/graphics/MeshTests.cpp
+    tests/graphics/TextureTests.cpp
+    tests/graphics/RendererTests.cpp
+)
+
+# Create test executable
+add_executable(${PROJECT_NAME}Tests ${TEST_SOURCES})
+
+# Link the test executable with our engine library
+target_link_libraries(${PROJECT_NAME}Tests
+    PRIVATE
+        ${PROJECT_NAME}Lib
+        gtest_main
+)
 
 # Install rules
 install(TARGETS ${PROJECT_NAME}
